[animation-worklet] Transfrom related worklet animations should respond to zoom

Worklet animation compositing state should be updated when a zoom or viewport
resize changes css pixel to dip ratio.

The fix is to simply match what we already do for regular animations for worklet
animations.

TEST=virtual/threaded/fast/animationworklet/worklet-animation-responsive-to-zoom.html

Bug: 879107
Change-Id: I0b74bd8297e83b18afd087247f09339aedcc618b
Reviewed-on: https://chromium-review.googlesource.com/1237133
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Commit-Queue: Majid Valipour <majidvp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593171}
Former-commit-id: dec72e86b3c1d8dd4de2bb033fc551cc25b63ce8