third_party/blink/renderer/modules/animationworklet/worklet_animation.cc
@@ -380,8 +380,7 @@ void WorkletAnimation::UpdateIfNecessary() {
 }
 
 void WorkletAnimation::EffectInvalidated() {
-  effect_needs_restart_ = true;
-  document_->GetWorkletAnimationController().InvalidateAnimation(*this);
+  InvalidateCompositingState();
 }
 
 void WorkletAnimation::Update(TimingUpdateReason reason) {
@@ -440,6 +439,11 @@ void WorkletAnimation::UpdateCompositingState() {
   } else if (play_state_ == Animation::kRunning) {
     UpdateOnCompositor();
   }
+}
+
+void WorkletAnimation::InvalidateCompositingState() {
+  effect_needs_restart_ = true;
+  document_->GetWorkletAnimationController().InvalidateAnimation(*this);
 }
 
 void WorkletAnimation::StartOnMain() {
